Added project config flow options
